--- a/index.html
+++ b/index.html
@@ -1,15 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jason Ng's Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/ress.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <h1>portfolio</h1>
-    <script src="js/index.js"></script>
+    <div class="wrapper">
+        <div id="stars"></div>
+        <div id="stars2"></div>
+        <div id="stars3"></div>
+    </div>
+        <header>
+            <div class="navi">
+                <div class="ttl">
+                    <h1>JASON NG'S PORTFOLIO</h1>
+                </div>
+                <div class="gblNavi">
+                    <ul>
+                        <li><a href="#">ABOUT</a></li>
+                        <li><a href="#">PROFILE</a></li>
+                        <li><a href="#">WORKS</a></li>
+                        <li><a href="#">CONTACT</a></li>
+                    </ul>
+                </div>
+            </div>
+        </header>
+        <main>
+            <div id="mainTxt">
+                <h2>
+                    Hi, I'm Jason Ng.
+                </h2>
+                <p>I'm an Front End Engineer.
+                    <br>
+                    And I'd like you to know more about myself.
+                </p>
+            </div>
+        </main>
 </body>
+
 </html>
