inserting stars correct way

--- a/index.html
+++ b/index.html
@@ -14,37 +14,36 @@
 </head>
 
 <body>
-    <div class="wrapper">
-        <div id="stars"></div>
-        <div id="stars2"></div>
-        <div id="stars3"></div>
+    <div id="background">
+        <canvas id="stars"></canvas>
     </div>
-        <header>
-            <div class="navi">
-                <div class="ttl">
-                    <h1>JASON NG'S PORTFOLIO</h1>
-                </div>
-                <div class="gblNavi">
-                    <ul>
-                        <li><a href="#">ABOUT</a></li>
-                        <li><a href="#">PROFILE</a></li>
-                        <li><a href="#">WORKS</a></li>
-                        <li><a href="#">CONTACT</a></li>
-                    </ul>
-                </div>
+    <header>
+        <div class="navi">
+            <div class="ttl">
+                <h1>JASON NG'S PORTFOLIO</h1>
             </div>
-        </header>
-        <main>
-            <div id="mainTxt">
-                <h2>
-                    Hi, I'm Jason Ng.
-                </h2>
-                <p>I'm an Front End Engineer.
-                    <br>
-                    And I'd like you to know more about myself.
-                </p>
+            <div class="gblNavi">
+                <ul>
+                    <li><a href="#">ABOUT</a></li>
+                    <li><a href="#">PROFILE</a></li>
+                    <li><a href="#">WORKS</a></li>
+                    <li><a href="#">CONTACT</a></li>
+                </ul>
             </div>
-        </main>
+        </div>
+    </header>
+    <main>
+        <div id="mainTxt">
+            <h2>
+                Hi, I'm Jason Ng.
+            </h2>
+            <p>I'm a Front End Engineer.
+                <br>
+                And I'd like you to know more about myself.
+            </p>
+        </div>
+    </main>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
