setting the background color

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <div id="background">
         <canvas id="stars"></canvas>
     </div>
+    <div id="arrow">
+            <img src="img/top-arrow.png" alt="top-arrow" class="topArw">
+            <img src="img/bottom-arrow.png" alt="bottom-arrow" class="btmArw">
+    </div>
     <header>
         <div class="navi">
             <div class="ttl">
@@ -33,15 +37,37 @@
         </div>
     </header>
     <main>
-        <div id="mainTxt">
-            <h2>
-                Hi, I'm Jason Ng.
-            </h2>
-            <p>I'm a Front End Engineer.
-                <br>
-                And I'd like you to know more about myself.
-            </p>
-        </div>
+        <section>
+            <div class="mainVis">
+                <div id="mainTxt">
+                    <h2>
+                        Hi, I'm Jason Ng.
+                    </h2>
+                    <p>I'm a Front End Engineer.
+                        <br>
+                        And I'd like you to know more about myself.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="aboutWrap">
+                <div class="aboutTtl">
+                    <h1>ABOUT</h1>
+                </div>
+                <div class="aboutMain">
+                    <div class="aboutPic">
+                        <figure>
+                            <img src="img/" alt="">
+                        </figure>
+                    </div>
+                    <div class="aboutMe">
+                        <p></p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
     <script src="js/index.js"></script>
 </body>
