adding scroll animation

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/ress.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/reveal.css">
 </head>
 
 <body>
@@ -56,8 +57,7 @@
                     <h1>ABOUT</h1>
                 </div>
                 <div class="aboutMain">
-                    <div class="aboutPic">
-
+                    <div class="aboutPic reveal">
                     </div>
                     <div class="aboutMe">
                         <p></p>
@@ -68,6 +68,7 @@
 
     </main>
     <script src="js/index.js"></script>
+    <script src="js/reveal.js"></script>
 </body>
 
 </html>
