creating the works section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DotGothic16&family=VT323&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/ress.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reveal.css">
@@ -29,8 +32,8 @@
             </div>
             <div class="gblNavi">
                 <ul>
-                    <li><a href="#">ABOUT</a></li>
-                    <li><a href="#">PROFILE</a></li>
+                    <li><a href="#aboutWrap">ABOUT</a></li>
+                    <li><a href="#profWrap">PROFILE</a></li>
                     <li><a href="#">WORKS</a></li>
                     <li><a href="#">CONTACT</a></li>
                 </ul>
@@ -52,15 +55,104 @@
             </div>
         </section>
         <section>
-            <div class="aboutWrap">
+            <div id="aboutWrap">
                 <div class="aboutTtl">
                     <h1>ABOUT</h1>
                 </div>
                 <div class="aboutMain">
+                    <div class="aboutMe">
+                        <p>
+                            私は好奇心旺盛な人間です。
+                            <br>
+                            何かに興味を持ったら、それが理解できるまで調べないと、じっと座っていられなくなります。
+                            <br>
+                            私はプログラミングの経験がなく、最初は苦労しましたが、コンピューター言語はほとんど英語を使用しているため、すぐに理解できました。
+                            <br>
+                            現在、私は主にフロントエンド
+                            エンジニアリングの分野を勉強しています。JavaScriptの使い方を学ぶことに多くの時間を費やしているので、いつかこの知識を使ってより多くのコンピューター言語を学べるようになりたいです。
+                        </p>
+                    </div>
                     <div class="aboutPic reveal">
                     </div>
-                    <div class="aboutMe">
-                        <p></p>
+                </div>
+            </div>
+        </section>
+        <div class="clear"></div>
+        <section>
+            <div id="profWrap">
+                <div class="profTtl">
+                    <h1>PROFILE</h1>
+                </div>
+                <div class="profMain">
+                    <p>
+                        01 <span class="classtype">class</span> <span class="classname">JasonNg</span> <span
+                            class="classbrckt">{</span>
+                        <br>
+                        02 <span>constructor</span><span>()</span><span>{</span>
+                        <br>
+                        03 my.name = “JasonNg”;
+                        <br>
+                        04 my.age = 21;
+                        <br>
+                        05 my.birthday = “2001 / 11 / 2”;
+                        <br>
+                        06 my.birthplace = “Indonesia”;
+                        <br>
+                        07 my.email = “Jasmix555@gmail.com”;
+                        <br>
+                        08 }
+                        <br>
+                        09 enabledLanguage(){
+                        <br>
+                        10 return[ “English” , “BahasaIndonesia” , “Japanese” , “Hokkien” ]
+                        <br>
+                        11 }
+                        <br>
+                        12 codingLanguage(){
+                        <br>
+                        13 return [ “HTML5” , “SCSS” ]
+                        <br>
+                        14 }
+                        <br>
+                        15 programmingLanguage(){
+                        <br>
+                        16 return [ “Javascript” , “HTML5” , “CSS” , “SCSS” ]
+                        <br>
+                        17 }
+                        <br>
+                        18 tools(){
+                        <br>
+                        19 return [ “VisualStudioCode” , “Figma” , “Photoshop” , “Illustrator” , “AfterEffects” ,
+                        “PremierePro” , “XD” , “InDesign” ]
+                        <br>
+                        20 }
+                        <br>
+                        21 }
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div id="worksWrap">
+                <div class="worksttl">
+                    <h1>WORKS</h1>
+                </div>
+                <div class="worksmain">
+                    <div class="work1">
+                        <figure>
+                            <img src="img/website/chittle.png" alt=""></figure>
+                    </div>
+                    <div class="work2">
+                        <figure><img src="img/website/nemu.png" alt=""></figure>
+                    </div>
+                    <div class="work3">
+                        <figure><img src="img/website/62resto.png" alt=""></figure>
+                    </div>
+                    <div class="work4">
+                        <figure><img src="img/website/xco.png" alt=""></figure>
+                    </div>
+                    <div class="work5">
+                        <figure><img src="img/website/tdl.png" alt=""></figure>
                     </div>
                 </div>
             </div>
