--- a/index.html
+++ b/index.html
@@ -84,54 +84,286 @@
                     <h1>PROFILE</h1>
                 </div>
                 <div class="profMain">
-                    <p>
-                        01 <span class="classtype">class</span> <span class="classname">JasonNg</span> <span
-                            class="classbrckt">{</span>
+                    <!-- <p>
+                        1
                         <br>
-                        02 <span>constructor</span><span>()</span><span>{</span>
+                        2
                         <br>
-                        03 my.name = “JasonNg”;
+                        3
                         <br>
-                        04 my.age = 21;
+                        4
                         <br>
-                        05 my.birthday = “2001 / 11 / 2”;
+                        5
                         <br>
-                        06 my.birthplace = “Indonesia”;
+                        6
                         <br>
-                        07 my.email = “Jasmix555@gmail.com”;
+                        7
                         <br>
-                        08 }
+                        8
                         <br>
-                        09 enabledLanguage(){
+                        9
                         <br>
-                        10 return[ “English” , “BahasaIndonesia” , “Japanese” , “Hokkien” ]
+                        10
                         <br>
-                        11 }
+                        11
                         <br>
-                        12 codingLanguage(){
+                        12
                         <br>
-                        13 return [ “HTML5” , “SCSS” ]
+                        13
                         <br>
-                        14 }
+                        14
                         <br>
-                        15 programmingLanguage(){
+                        15
                         <br>
-                        16 return [ “Javascript” , “HTML5” , “CSS” , “SCSS” ]
+                        16
                         <br>
-                        17 }
+                        17
                         <br>
-                        18 tools(){
+                        18
                         <br>
-                        19 return [ “VisualStudioCode” , “Figma” , “Photoshop” , “Illustrator” , “AfterEffects” ,
-                        “PremierePro” , “XD” , “InDesign” ]
+                        19
                         <br>
-                        20 }
+                        20
                         <br>
-                        21 }
+                        21
+                    </p> -->
+                    <p class="classwrap" data-value="1">
+                        <span class="classcode">
+                            <span class="classprod">class</span> 
+                            <span class="classel">JasonNg</span> 
+                            <span class="classbrckt">{</span>
+                        </span>
+                    </p>
+                    <p class="classwrap" data-value="2">
+                        <span class="classcode">
+                            <span class="classtype">
+                                constructor
+                            </span>
+                            <span class="classbrckt">
+                                (){
+                            </span>
+                        </span>
+                    </p>
+                    <p class="classwrap" data-value="3">
+                        <span class="classcode">
+                            <span class="classhead">
+                                my
+                            </span>
+                            .name =
+                            <span class="classel">
+                                “JasonNg”
+                            </span>
+                            ;
+                        </span>
+                    </p>
+                    <p class="classwrap" data-value="4">
+                        <span class="classcode">
+                            <span class="classhead">
+                                my
+                            </span>
+                            .age =
+                            <span class="classel">
+                                21
+                            </span>
+                            ;
+                        </span>
+                    </p>
+                    <p class="classwrap" data-value="5">
+                        <span class="classcode">
+                            <span class="classhead">
+                                my
+                            </span>
+                                .birthday =
+                            <span class="classel">
+                                “2001 / 11 / 2”
+                            </span>
+                            ;
+                        </span>
+                    </p>
+                    <p class="classwrap" data-value="6">
+                        <span class="classcode">
+                            <span class="classhead">
+                                my
+                            </span>
+                            <span>
+                                .birthplace = 
+                            </span>
+                            <span class="classel">
+                                “Indonesia”
+                            </span>
+                            <span>
+                                ;
+                            </span>
+                        </span>
+                    </p>
+                    <p class="classwrap" data-value="7">
+                        <span class="classcode">
+                            <span class="classhead">
+                                my
+                            </span>
+                            .email =
+                            <span class="classel">
+                                “Jasmix555@gmail.com”
+                            </span>
+                            ;
+                        </span>
+                    </p>
+                    <p class="classwrap" data-value="8">
+                        <span class="classcode">
+                            <span class="classbrckt">
+                            }
+                            </span>
+                        </span>
+                    </p>
+                    <p class="classwrap" data-value="9">
+                        <span class="classcode">
+                            <span class="classtype">
+                                enabledLanguage
+                            </span>
+                            <span class="classbrckt">
+                                (){
+                            </span>
+                        </span>
+                    </p>
+                    <p class="classwrap" data-value="10">
+                        <span class="classcode">
+                            <span class="classrtrn">
+                                return
+                            </span>
+                            <span class="classbrckt">
+                                [
+                            </span>
+                            <span class="classel">
+                                “English” , “BahasaIndonesia” , “Japanese” , “Hokkien”
+                            </span>
+                            <span class="classbrckt">
+                                ]
+                            </span>
+                            ;
+                        </span>
+                    </p>
+                    <p class="classwrap" data-value="11">
+                        <span class="classcode">
+                            <span class="classbrckt">
+                            }
+                            </span>
+                        </span>
+                    </p>
+                    <p class="classwrap" data-value="12">
+                        <span class="classcode">
+                            <span class="classtype">
+                                codingLanguage
+                            </span>
+                            <span class="classbrckt">
+                                (){
+                            </span>
+                        </span>
+                    </p>
+                    <p class="classwrap" data-value="13">
+                        <span class="classcode">
+                            <span class="classrtrn">
+                                return 
+                            </span>
+                            <span class="classbrckt">
+                                [
+                            </span>
+                            <span class="classel">
+                                “HTML5” , “SCSS”
+                            </span>
+                            <span class="classbrckt">
+                                ]
+                            </span>
+                            ;
+                        </span>
+                    </p>
+                    <p class="classwrap" data-value="14">
+                        <span class="classcode">
+                            <span class="classbrckt">
+                            }
+                            </span>
+                        </span>
+                    </p>
+                    <p class="classwrap" data-value="15">
+                        <span class="classcode">
+                            <span class="classtype">
+                                programmingLanguage
+                            </span>
+                            <span class="classbrckt">
+                                (){
+                            </span>
+                        </span>
+                    </p>
+                    <p class="classwrap" data-value="16">
+                        <span class="classcode">
+                            <span class="classrtrn">
+                                return
+                            </span>
+                            <span class="classbrckt">
+                                [
+                            </span>
+                            <span class="classel">
+                                “Javascript” , “HTML5” , “CSS” , “SCSS”
+                            </span>
+                            <span class="classbrckt">
+                                ]
+                            </span>
+                            ;
+                        </span>
+                    </p>
+                    <p class="classwrap" data-value="17">
+                        <span class="classcode">
+                            <span class="classbrckt">
+                            }
+                            </span>
+                        </span>
+                    </p>
+                    <p class="classwrap" data-value="18">
+                        <span class="classcode">
+                            <span class="classtype">
+                                tools
+                            </span>
+                            <span class="classbrckt">
+                                (){
+                            </span>
+                        </span>
+                    </p>
+                    <p class="classwrap" data-value="19">
+                        <span class="classcode">
+                            <span class="classrtrn">
+                                return
+                            </span>
+                            <span class="classbrckt">
+                                [
+                            </span>
+                            <span class="classel">
+                                “VisualStudioCode” , “Figma” , “Photoshop” , “Illustrator” , “XD” , “InDesign , 
+                                <br>
+                                “AfterEffects” ,“PremierePro”” 
+                            </span>
+                            <span class="classbrckt">
+                            ]
+                            </span>
+                            ;
+                        </span>
+                    </p>
+                    <p class="classwrap" data-value="20">
+                        <span class="classcode">
+                            <span class="classbrckt">
+                            }
+                            </span>
+                        </span>
+                    </p>
+                    <p class="classwrap" data-value="21">
+                        <span class="classcode">
+                            <span class="classbrckt">
+                            }
+                            </span>
+                        </span>
                     </p>
                 </div>
             </div>
         </section>
+        <div class="clear"></div>
         <section>
             <div id="worksWrap">
                 <div class="worksttl">
@@ -140,19 +372,28 @@
                 <div class="worksmain">
                     <div class="work1">
                         <figure>
-                            <img src="img/website/chittle.png" alt=""></figure>
+                            <img src="img/website/chittle.png" alt="">
+                        </figure>
                     </div>
                     <div class="work2">
-                        <figure><img src="img/website/nemu.png" alt=""></figure>
+                        <figure>
+                            <img src="img/website/nemu.png" alt="">
+                        </figure>
                     </div>
                     <div class="work3">
-                        <figure><img src="img/website/62resto.png" alt=""></figure>
+                        <figure>
+                            <img src="img/website/62resto.png" alt="">
+                        </figure>
                     </div>
                     <div class="work4">
-                        <figure><img src="img/website/xco.png" alt=""></figure>
+                        <figure>
+                            <img src="img/website/xco.png" alt="">
+                        </figure>
                     </div>
                     <div class="work5">
-                        <figure><img src="img/website/tdl.png" alt=""></figure>
+                        <figure>
+                            <img src="img/website/tdl.png" alt="">
+                        </figure>
                     </div>
                 </div>
             </div>
