start to make the contact page

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <ul>
                     <li><a href="#aboutWrap">ABOUT</a></li>
                     <li><a href="#profWrap">PROFILE</a></li>
-                    <li><a href="#">WORKS</a></li>
-                    <li><a href="#">CONTACT</a></li>
+                    <li><a href="#worksWrap">WORKS</a></li>
+                    <li><a href="#cntctWrap">CONTACT</a></li>
                 </ul>
             </div>
         </div>
@@ -163,7 +163,7 @@
                             </span>
                             .age =
                             <span class="classel">
-                                21
+                                22
                             </span>
                             ;
                         </span>
@@ -372,7 +372,9 @@
                 <div class="worksmain">
                     <div class="work1">
                         <figure>
-                            <img src="img/website/chittle.png" alt="">
+                            <a href="">
+                                <img src="img/website/chittle.png" alt="">
+                            </a>
                         </figure>
                     </div>
                     <div class="work2">
@@ -394,6 +396,24 @@
                         <figure>
                             <img src="img/website/tdl.png" alt="">
                         </figure>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <div class="clear"></div>
+        <section>
+            <div id="cntctWrap">
+                <div class="cntctTtl">
+                    <h1>CONTACT</h1>
+                </div>
+                <div class="inputWrap">
+                    <div class="inputBox">
+                        <input type="text" required="required">
+                        <span>名前:</span>
+                    </div>
+                    <div class="inputBox">
+                        <input type="text" required="required">
+                        <span>メール:</span>
                     </div>
                 </div>
             </div>
