inserting text stroke

--- a/index.html
+++ b/index.html
@@ -25,27 +25,62 @@
         <img src="img/top-arrow.png" alt="top-arrow" class="topArw">
         <img src="img/bottom-arrow.png" alt="bottom-arrow" class="btmArw">
     </div>
+    <div class="border">
+    </div>
     <header>
         <div class="navi">
-            <div class="ttl">
-                <h1>JASON NG'S PORTFOLIO</h1>
-            </div>
             <div class="gblNavi">
                 <ul>
-                    <li><a href="#aboutWrap">ABOUT</a></li>
-                    <li><a href="#profWrap">PROFILE</a></li>
-                    <li><a href="#worksWrap">WORKS</a></li>
-                    <li><a href="#cntctWrap">CONTACT</a></li>
+                    <li><a href="#top">TOP</a></li>
+                    <li><a href="#about">ABOUT</a></li>
+                    <li><a href="#profile">PROFILE</a></li>
+                    <li><a href="#works">WORKS</a></li>
+                    <li><a href="#contact">CONTACT</a></li>
                 </ul>
             </div>
         </div>
     </header>
     <main>
-        <section>
+        <section id="top">
+            <div class="ttl">
+                <h1>JASON NG'S PORTFOLIO</h1>
+            </div>
             <div class="mainVis">
                 <div id="mainTxt">
                     <h2>
-                        Hi, I'm Jason Ng.
+                        Hi, I'm
+                        <br>
+                        <svg version="1.1" id="svg" xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 780 180"
+                            style="enable-background:new 0 0 828 176;" xml:space="preserve">
+                            <style type="text/css">
+                                .st0 {
+                                    enable-background: new;
+                                }
+                            </style>
+                            <g>
+                                <g class="st0">
+                                    <path d="M60.3,27.2h26.3v78.5c0,34.6-16.7,44.6-40.4,44.6c-5.9,0-13.1-0.9-17.6-2.6l2.8-21.4c3.3,1,7.5,1.8,12.1,1.8
+			c10.1,0,16.9-4.5,16.9-22.3V27.2z" />
+                                    <path d="M133.8,118.4l-7.6,30.1H99.5l33.8-121.3h33.6l33.5,121.3h-27.6l-8.1-30.1H133.8z M161.3,98.6L154.8,73
+			c-1.8-7.2-3.8-17.3-5.5-24.6h-0.4c-1.6,7.4-3.5,17.6-5.2,24.7l-6.4,25.6H161.3z" />
+                                    <path
+                                        d="M215.6,121.5c6.5,3.6,17,6.8,27.3,6.8c12.2,0,18.5-5.4,18.5-13.4c0-7.8-5.7-12.2-18.9-17.8c-19.1-8.1-30.3-19.6-30.3-35.3
+			c0-20.3,16-36.2,43.6-36.2c12.1,0,21.3,2.6,27.4,5.6l-5.4,21.5c-4.4-2.3-12.1-5.3-22.4-5.3c-11.4,0-16.8,5.7-16.8,12
+			c0,7.6,5.8,11.1,20.7,17.6c19.9,8.5,28.6,20,28.6,35.8c0,20.9-15.8,37.4-46.2,37.4c-12.6,0-25-3.4-31-6.7L215.6,121.5z" />
+                                    <path
+                                        d="M404.2,86.4c0,41.6-21.7,64-53.4,64c-33.4,0-51.5-27.8-51.5-62c0-35.3,20.3-63,53.3-63C387.5,25.4,404.2,54.6,404.2,86.4z
+			 M327,88.1c0,24.9,9.4,40.8,25.1,40.8c16,0,24.5-17.7,24.5-41.6c0-21.7-8.2-40.6-24.6-40.6C336.1,46.8,327,63.8,327,88.1z" />
+                                    <path d="M421.4,148.5V27.2h28.9l23.2,45.4c6.2,11.7,12.9,27,17.8,39.7l0.4,0c-1.4-15-2.3-32.8-2.3-52.3V27.2h23.8v121.3h-26.6
+			L462.9,102c-6.3-12.2-13.5-27.7-18.5-40.9l-0.5,0c0.8,14.9,1.3,32.5,1.3,53.7v33.7H421.4z" />
+                                    <path d="M570.2,148.5V27.2h28.9l23.2,45.4c6.2,11.7,12.9,27,17.8,39.7l0.4,0c-1.4-15-2.3-32.8-2.3-52.3V27.2h23.8v121.3h-26.6
+			L611.8,102c-6.3-12.2-13.5-27.7-18.5-40.9l-0.5,0c0.8,14.9,1.3,32.5,1.3,53.7v33.7H570.2z" />
+                                    <path d="M776.2,143.7c-7.5,2.7-22,6.1-35.9,6.1c-19.7,0-34-5.1-44.2-15c-10.9-10.5-16.9-26.9-16.7-45.6
+			c0.3-41.5,28.4-63.1,63.9-63.1c13.7,0,24.2,2.6,29.6,5.2l-5.2,21.5c-5.8-2.6-12.8-4.4-23.9-4.4c-20.8,0-36.8,12.3-36.8,40.3
+			c0,26.3,14.5,39.7,33.5,39.7c5,0,9-0.6,10.8-1.4v-26.6h-16.4V79.5h41.4V143.7z" />
+                                </g>
+                            </g>
+                        </svg>
                     </h2>
                     <p>I'm a Front End Engineer.
                         <br>
@@ -54,7 +89,7 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section id="about">
             <div id="aboutWrap">
                 <div class="aboutTtl">
                     <h1>ABOUT</h1>
@@ -78,59 +113,16 @@
             </div>
         </section>
         <div class="clear"></div>
-        <section>
+        <section id="profile">
             <div id="profWrap">
                 <div class="profTtl">
                     <h1>PROFILE</h1>
                 </div>
                 <div class="profMain">
-                    <!-- <p>
-                        1
-                        <br>
-                        2
-                        <br>
-                        3
-                        <br>
-                        4
-                        <br>
-                        5
-                        <br>
-                        6
-                        <br>
-                        7
-                        <br>
-                        8
-                        <br>
-                        9
-                        <br>
-                        10
-                        <br>
-                        11
-                        <br>
-                        12
-                        <br>
-                        13
-                        <br>
-                        14
-                        <br>
-                        15
-                        <br>
-                        16
-                        <br>
-                        17
-                        <br>
-                        18
-                        <br>
-                        19
-                        <br>
-                        20
-                        <br>
-                        21
-                    </p> -->
                     <p class="classwrap" data-value="1">
                         <span class="classcode">
-                            <span class="classprod">class</span> 
-                            <span class="classel">JasonNg</span> 
+                            <span class="classprod">class</span>
+                            <span class="classel">JasonNg</span>
                             <span class="classbrckt">{</span>
                         </span>
                     </p>
@@ -173,7 +165,7 @@
                             <span class="classhead">
                                 my
                             </span>
-                                .birthday =
+                            .birthday =
                             <span class="classel">
                                 “2001 / 11 / 2”
                             </span>
@@ -186,7 +178,7 @@
                                 my
                             </span>
                             <span>
-                                .birthplace = 
+                                .birthplace =
                             </span>
                             <span class="classel">
                                 “Indonesia”
@@ -211,7 +203,7 @@
                     <p class="classwrap" data-value="8">
                         <span class="classcode">
                             <span class="classbrckt">
-                            }
+                                }
                             </span>
                         </span>
                     </p>
@@ -245,7 +237,7 @@
                     <p class="classwrap" data-value="11">
                         <span class="classcode">
                             <span class="classbrckt">
-                            }
+                                }
                             </span>
                         </span>
                     </p>
@@ -262,7 +254,7 @@
                     <p class="classwrap" data-value="13">
                         <span class="classcode">
                             <span class="classrtrn">
-                                return 
+                                return
                             </span>
                             <span class="classbrckt">
                                 [
@@ -279,7 +271,7 @@
                     <p class="classwrap" data-value="14">
                         <span class="classcode">
                             <span class="classbrckt">
-                            }
+                                }
                             </span>
                         </span>
                     </p>
@@ -313,7 +305,7 @@
                     <p class="classwrap" data-value="17">
                         <span class="classcode">
                             <span class="classbrckt">
-                            }
+                                }
                             </span>
                         </span>
                     </p>
@@ -336,12 +328,11 @@
                                 [
                             </span>
                             <span class="classel">
-                                “VisualStudioCode” , “Figma” , “Photoshop” , “Illustrator” , “XD” , “InDesign , 
-                                <br>
-                                “AfterEffects” ,“PremierePro”” 
+                                “VisualStudioCode” , “Figma” , “Photoshop” , “Illustrator” , “XD” , “InDesign ,
+                                “AfterEffects” ,“PremierePro””
                             </span>
                             <span class="classbrckt">
-                            ]
+                                ]
                             </span>
                             ;
                         </span>
@@ -349,14 +340,14 @@
                     <p class="classwrap" data-value="20">
                         <span class="classcode">
                             <span class="classbrckt">
-                            }
+                                }
                             </span>
                         </span>
                     </p>
                     <p class="classwrap" data-value="21">
                         <span class="classcode">
                             <span class="classbrckt">
-                            }
+                                }
                             </span>
                         </span>
                     </p>
@@ -364,7 +355,7 @@
             </div>
         </section>
         <div class="clear"></div>
-        <section>
+        <section id="works">
             <div id="worksWrap">
                 <div class="worksttl">
                     <h1>WORKS</h1>
@@ -372,36 +363,34 @@
                 <div class="worksmain">
                     <div class="work1">
                         <figure>
-                            <a href="">
-                                <img src="img/website/chittle.png" alt="">
-                            </a>
+                            <img src="img/website/chittle.png" alt="chittle">
                         </figure>
                     </div>
                     <div class="work2">
                         <figure>
-                            <img src="img/website/nemu.png" alt="">
+                            <img src="img/website/nemu.png" alt="nemu">
                         </figure>
                     </div>
                     <div class="work3">
                         <figure>
-                            <img src="img/website/62resto.png" alt="">
+                            <img src="img/website/62resto.png" alt="62Resto">
                         </figure>
                     </div>
                     <div class="work4">
                         <figure>
-                            <img src="img/website/xco.png" alt="">
+                            <img src="img/website/xco.png" alt="xco">
                         </figure>
                     </div>
                     <div class="work5">
                         <figure>
-                            <img src="img/website/tdl.png" alt="">
+                            <img src="img/website/tdl.png" alt="tdl">
                         </figure>
                     </div>
                 </div>
             </div>
         </section>
         <div class="clear"></div>
-        <section>
+        <section id="contact">
             <div id="cntctWrap">
                 <div class="cntctTtl">
                     <h1>CONTACT</h1>
