--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         Hi, I'm
                         <br>
                         <svg version="1.1" id="svg" xmlns="http://www.w3.org/2000/svg"
-                            xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 780 180"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 780 180"
                             style="enable-background:new 0 0 828 176;" xml:space="preserve">
                             <style type="text/css">
                                 .st0 {
