setting custom cursor

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     </div>
     <div class="border">
     </div>
+    <div class="inner-cursor"></div>
+
     <header>
         <div class="navi">
             <div class="gblNavi">
