creating submit button

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <p class="classwrap" data-value="1">
                         <span class="classcode">
                             <span class="classprod">class</span>
-                            <span class="classel">JasonNg</span>
+                            <span class="classname">JasonNg</span>
                             <span class="classbrckt">{</span>
                         </span>
                     </p>
@@ -145,7 +145,7 @@
                             </span>
                             .name =
                             <span class="classel">
-                                “JasonNg”
+                                “Jason Ng”
                             </span>
                             ;
                         </span>
@@ -167,7 +167,7 @@
                             <span class="classhead">
                                 my
                             </span>
-                            .birthday =
+                            .birthdate =
                             <span class="classel">
                                 “2001 / 11 / 2”
                             </span>
@@ -401,10 +401,20 @@
                     <div class="inputBox">
                         <input type="text" required="required">
                         <span>名前:</span>
+                        <div class="line"></div>
                     </div>
                     <div class="inputBox">
                         <input type="text" required="required">
                         <span>メール:</span>
+                        <div class="line"></div>
+                    </div>
+                    <div class="txtarea">
+                        <textarea id="text" cols="30" rows="1" required="required"></textarea>
+                        <span>メッセージ：</span>
+                        <div class="line"></div>
+                    </div>
+                    <div class="btn">
+                        <input type="submit" value="SEND">
                     </div>
                 </div>
             </div>
