cleaning the nav bar

--- a/index.html
+++ b/index.html
@@ -31,15 +31,13 @@
 
     <header>
         <div class="navi">
-            <div class="gblNavi">
-                <ul>
-                    <li><a href="#top">TOP</a></li>
-                    <li><a href="#about">ABOUT</a></li>
-                    <li><a href="#profile">PROFILE</a></li>
-                    <li><a href="#works">WORKS</a></li>
-                    <li><a href="#contact">CONTACT</a></li>
-                </ul>
-            </div>
+            <ul>
+                <li><a href="#top">TOP</a></li>
+                <li><a href="#about">ABOUT</a></li>
+                <li><a href="#profile">PROFILE</a></li>
+                <li><a href="#works">WORKS</a></li>
+                <li><a href="#contact">CONTACT</a></li>
+            </ul>
         </div>
     </header>
     <main>
@@ -97,19 +95,19 @@
                     <h1>ABOUT</h1>
                 </div>
                 <div class="aboutMain">
+                    <div class="aboutPic reveal">
+                    </div>
                     <div class="aboutMe">
                         <p>
-                            私は好奇心旺盛な人間です。
+                            新しいことを探求するのが好きで、好奇心が強く、満足するまで諦めません！
                             <br>
-                            何かに興味を持ったら、それが理解できるまで調べないと、じっと座っていられなくなります。
+                            何かに興味を持ったら、それが理解できるまで調べないと、じっとしていられなくなります。
                             <br>
                             私はプログラミングの経験がなく、最初は苦労しましたが、コンピューター言語はほとんど英語を使用しているため、すぐに理解できました。
                             <br>
                             現在、私は主にフロントエンド
                             エンジニアリングの分野を勉強しています。JavaScriptの使い方を学ぶことに多くの時間を費やしているので、いつかこの知識を使ってより多くのコンピューター言語を学べるようになりたいです。
                         </p>
-                    </div>
-                    <div class="aboutPic reveal">
                     </div>
                 </div>
             </div>
@@ -413,8 +411,10 @@
                         <span>メッセージ：</span>
                         <div class="line"></div>
                     </div>
-                    <div class="btn">
-                        <input type="submit" value="SEND">
+                    <div class="btnWrap">
+                        <div class="btn">
+                            <a href="">SEND</a>
+                        </div>
                     </div>
                 </div>
             </div>
