restarting the works section

--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
             </div>
         </section>
         <div class="clear"></div>
-        <section id="works">
+        <!-- <section id="works">
             <div id="worksWrap">
                 <div class="worksttl">
                     <h1>WORKS</h1>
@@ -390,7 +390,8 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
+
         <div class="clear"></div>
         <section id="contact">
             <div id="cntctWrap">
