trying out slider

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/ress.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reveal.css">
+    <link rel="stylesheet" href="css/test.css">
 </head>
 
 <body>
@@ -360,7 +361,7 @@
                 <div class="worksttl">
                     <h1>WORKS</h1>
                 </div>
-                <div class="worksmain">
+                <!-- <div class="worksmain">
                     <div class="work1">
                         <figure>
                             <p>
@@ -387,6 +388,40 @@
                         <figure>
                             <img src="img/website/tdl.png" alt="tdl">
                         </figure>
+                    </div>
+                </div> -->
+                <div class="slider-container">
+
+                    <div class="slider-content">
+
+                        <div class="slider-single">
+                            <img class="slider-single-image" src="img/website/nemu.png" alt="1" />
+                            <h1 class="slider-single-title">Nemu Nemu Kun</h1>
+                        </div>
+
+                        <div class="slider-single">
+                            <img class="slider-single-image" src="img/website/chittle.png" alt="2" />
+                            <h1 class="slider-single-title">Chittle</h1>
+                        </div>
+
+                        <div class="slider-single">
+                            <img class="slider-single-image" src="img/website/xco.png" alt="3" />
+                            <h1 class="slider-single-title">XCO</h1>
+
+                        </div>
+
+                        <div class="slider-single">
+                            <img class="slider-single-image" src="img/website/62resto.png" alt="4" />
+                            <h1 class="slider-single-title">62resto</h1>
+
+                        </div>
+
+                        <div class="slider-single">
+                            <img class="slider-single-image" src="img/website/tdl.png" alt="5" />
+                            <h1 class="slider-single-title">To-do-list</h1>
+
+                        </div>
+
                     </div>
                 </div>
             </div>
