editing the slider

--- a/index.html
+++ b/index.html
@@ -395,30 +395,31 @@
                     <div class="slider-content">
 
                         <div class="slider-single">
-                            <img class="slider-single-image" src="img/website/nemu.png" alt="1" />
-                            <h1 class="slider-single-title">Nemu Nemu Kun</h1>
-                        </div>
-
-                        <div class="slider-single">
                             <img class="slider-single-image" src="img/website/chittle.png" alt="2" />
-                            <h1 class="slider-single-title">Chittle</h1>
+                            <h1 class="slider-single-title"><a target="_blank" href="https://click.ecc.ac.jp/ecc/json/Chittle/">Chittle</a></h1>
                         </div>
 
                         <div class="slider-single">
                             <img class="slider-single-image" src="img/website/xco.png" alt="3" />
-                            <h1 class="slider-single-title">XCO</h1>
+                            <h1 class="slider-single-title"><a target="_blank" href="https://click.ecc.ac.jp/ecc/json/XCO-LP/">XCO</a></h1>
 
                         </div>
 
                         <div class="slider-single">
                             <img class="slider-single-image" src="img/website/62resto.png" alt="4" />
-                            <h1 class="slider-single-title">62resto</h1>
+                            <h1 class="slider-single-title"><a target="_blank" href="https://click.ecc.ac.jp/ecc/json/+62Resto/">+62Resto</a></h1>
 
                         </div>
 
                         <div class="slider-single">
+                            <img class="slider-single-image" src="img/website/nemu.png" alt="1" />
+                            <h1 class="slider-single-title"><a target="_blank" href="https://click.ecc.ac.jp/ecc/json/Nemu-Nemu%20Kun/">Nemu Nemu Kun</a></h1>
+                            
+                        </div>
+
+                        <div class="slider-single">
                             <img class="slider-single-image" src="img/website/tdl.png" alt="5" />
-                            <h1 class="slider-single-title">To-do-list</h1>
+                            <h1 class="slider-single-title"><a target="_blank" href="https://click.ecc.ac.jp/ecc/json/to-do-list/">To-Do-List</a></h1>
 
                         </div>
 
